update program scripts