@@ -5,11 +5,11 @@ if [ -z "$S1TBX_HOME" ]; then
 fi
 
 $S1TBX_HOME/jre/bin/java \
-	-server -Xms512M -Xmx3000M -XX:PermSize=512m -XX:MaxPermSize=512m -Xverify:none \
+	-server -Xms512M -Xmx3000M -Xverify:none \
     -XX:+AggressiveOpts -XX:+UseFastAccessorMethods \
     -XX:+UseParallelGC -XX:+UseNUMA -XX:+UseLoopPredicate -XX:+UseStringCache \
     -Dceres.context=s1tbx \
-    "-Ds1tbx.mainClass=org.esa.beam.framework.gpf.main.Main" \
+    "-Ds1tbx.mainClass=org.esa.beam.framework.gpf.main.GPT" \
     "-Ds1tbx.home=$S1TBX_HOME" \
 	"-Ds1tbx.debug=false" \
     "-Dncsa.hdf.hdflib.HDFLibrary.hdflib=$S1TBX_HOME/libjhdf.so" \
